beluga and params

--- a/notebooks/rim_finalrun128hst_results.ipynb
+++ b/notebooks/rim_finalrun128hst_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "id": "victorian-tracker",
    "metadata": {},
    "outputs": [],
@@ -46,16 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "actual-butterfly",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model = \"RIMSU512_k128_NIEs_019_TI1000_32_B5_210918011431\"\n",
-    "# model = \"RIMSU512_k128_NIEs_017_TI1000_16_B5_210918010833\"\n",
-    "# model = \"RIMSU512_k128_NIE2nsvdO_033_TS10_F16_L5_IK11_NLrelu_al0.04_GAplus_42_B10_lr0.0005_dr0.8_ds5000_TWquadratic_210923032150\"\n",
-    "# dataset = \"lenses512_k128_NIE_10k_verydiffuse\"\n",
-    "model = \"RIMSU128hst_control_012_TS15_F16_211020033949\"\n",
+    "# model = \"RIMSU128hst_control_012_TS15_F16_211020033949\"\n",
+    "# model = \"RIMSU128hst_control_010_TS10_F16_211020033949\"\n",
+    "# model = \"RIMSU128hst_control_009_TS8_F32_211020033949\"\n",
+    "model = \"RIMSU128hst_control_007_TS6_F32_211020033237\"\n",
     "_dataset = \"lenses128hst_TNG_VAE_200k_control_validated_val\"\n",
     "\n",
     "checkpoints_dir = os.path.join(os.getenv(\"CENSAI_PATH\"), \"models\", model)\n",
@@ -77,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "accessory-species",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x2b3859ac4040>"
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x2b4410b53730>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "3bda49c3-1027-4003-b6ef-bb59d654ba53",
    "metadata": {},
    "outputs": [
@@ -155,110 +154,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 1/5 [02:51<11:27, 171.87s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR:tensorflow:==================================\n",
-      "Object was never used (type <class 'tensorflow.python.ops.tensor_array_ops.TensorArray'>):\n",
-      "<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x2b389fd54b20>\n",
-      "If you want to mark it as used call its \"mark_used()\" method.\n",
-      "It was originally created here:\n",
-      "  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3458, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)  File \"<ipython-input-28-433ba2cef1a5>\", line 19, in <module>\n",
-      "    source_pred, kappa_pred, chi_squared = rim.predict(lens)  File \"/lustre04/scratch/aadam/Censai/censai/rim_shared_unet.py\", line 196, in predict\n",
-      "    source, kappa, states = self.time_step(source, kappa, source_grad, kappa_grad, states)  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/tensorflow/python/util/tf_should_use.py\", line 247, in wrapped\n",
-      "    return _add_should_use_warning(fn(*args, **kwargs),\n",
-      "==================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:tensorflow:==================================\n",
-      "Object was never used (type <class 'tensorflow.python.ops.tensor_array_ops.TensorArray'>):\n",
-      "<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x2b389fd54b20>\n",
-      "If you want to mark it as used call its \"mark_used()\" method.\n",
-      "It was originally created here:\n",
-      "  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3458, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)  File \"<ipython-input-28-433ba2cef1a5>\", line 19, in <module>\n",
-      "    source_pred, kappa_pred, chi_squared = rim.predict(lens)  File \"/lustre04/scratch/aadam/Censai/censai/rim_shared_unet.py\", line 196, in predict\n",
-      "    source, kappa, states = self.time_step(source, kappa, source_grad, kappa_grad, states)  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/tensorflow/python/util/tf_should_use.py\", line 247, in wrapped\n",
-      "    return _add_should_use_warning(fn(*args, **kwargs),\n",
-      "==================================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR:tensorflow:==================================\n",
-      "Object was never used (type <class 'tensorflow.python.ops.tensor_array_ops.TensorArray'>):\n",
-      "<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x2b389fd54eb0>\n",
-      "If you want to mark it as used call its \"mark_used()\" method.\n",
-      "It was originally created here:\n",
-      "  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3458, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)  File \"<ipython-input-28-433ba2cef1a5>\", line 19, in <module>\n",
-      "    source_pred, kappa_pred, chi_squared = rim.predict(lens)  File \"/lustre04/scratch/aadam/Censai/censai/rim_shared_unet.py\", line 196, in predict\n",
-      "    source, kappa, states = self.time_step(source, kappa, source_grad, kappa_grad, states)  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/tensorflow/python/util/tf_should_use.py\", line 247, in wrapped\n",
-      "    return _add_should_use_warning(fn(*args, **kwargs),\n",
-      "==================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:tensorflow:==================================\n",
-      "Object was never used (type <class 'tensorflow.python.ops.tensor_array_ops.TensorArray'>):\n",
-      "<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x2b389fd54eb0>\n",
-      "If you want to mark it as used call its \"mark_used()\" method.\n",
-      "It was originally created here:\n",
-      "  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3458, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)  File \"<ipython-input-28-433ba2cef1a5>\", line 19, in <module>\n",
-      "    source_pred, kappa_pred, chi_squared = rim.predict(lens)  File \"/lustre04/scratch/aadam/Censai/censai/rim_shared_unet.py\", line 196, in predict\n",
-      "    source, kappa, states = self.time_step(source, kappa, source_grad, kappa_grad, states)  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/tensorflow/python/util/tf_should_use.py\", line 247, in wrapped\n",
-      "    return _add_should_use_warning(fn(*args, **kwargs),\n",
-      "==================================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR:tensorflow:==================================\n",
-      "Object was never used (type <class 'tensorflow.python.ops.tensor_array_ops.TensorArray'>):\n",
-      "<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x2b3859c38c40>\n",
-      "If you want to mark it as used call its \"mark_used()\" method.\n",
-      "It was originally created here:\n",
-      "  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3458, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)  File \"<ipython-input-28-433ba2cef1a5>\", line 19, in <module>\n",
-      "    source_pred, kappa_pred, chi_squared = rim.predict(lens)  File \"/lustre04/scratch/aadam/Censai/censai/rim_shared_unet.py\", line 196, in predict\n",
-      "    source, kappa, states = self.time_step(source, kappa, source_grad, kappa_grad, states)  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/tensorflow/python/util/tf_should_use.py\", line 247, in wrapped\n",
-      "    return _add_should_use_warning(fn(*args, **kwargs),\n",
-      "==================================\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:tensorflow:==================================\n",
-      "Object was never used (type <class 'tensorflow.python.ops.tensor_array_ops.TensorArray'>):\n",
-      "<tensorflow.python.ops.tensor_array_ops.TensorArray object at 0x2b3859c38c40>\n",
-      "If you want to mark it as used call its \"mark_used()\" method.\n",
-      "It was originally created here:\n",
-      "  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/IPython/core/interactiveshell.py\", line 3458, in run_code\n",
-      "    self.showtraceback(running_compiled_code=True)  File \"<ipython-input-28-433ba2cef1a5>\", line 19, in <module>\n",
-      "    source_pred, kappa_pred, chi_squared = rim.predict(lens)  File \"/lustre04/scratch/aadam/Censai/censai/rim_shared_unet.py\", line 196, in predict\n",
-      "    source, kappa, states = self.time_step(source, kappa, source_grad, kappa_grad, states)  File \"/home/aadam/environments/censai3.8/lib/python3.8/site-packages/tensorflow/python/util/tf_should_use.py\", line 247, in wrapped\n",
-      "    return _add_should_use_warning(fn(*args, **kwargs),\n",
-      "==================================\n",
-      "100%|██████████| 5/5 [14:20<00:00, 172.09s/it]\n"
+      "100%|██████████| 5/5 [07:31<00:00, 90.33s/it]\n"
      ]
     }
    ],
@@ -310,8 +206,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "899a2773-e6bf-4b6b-ada8-b2ebd5866400",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/aadam/scratch/Censai/results/RIMSU128hst_control_007_TS6_F32_211020033237_lenses128hst_TNG_VAE_200k_control_validated_val'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_dir"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0d9cf136-4ca5-4a36-80ac-9b3999217d71",
+   "id": "01cf8024-af24-471d-a140-0ddb92ea6af0",
    "metadata": {},
    "outputs": [],
    "source": []
