Added variance and alpha variance to kappa fits files

--- a/notebooks/rim_finalrun128hst_results.ipynb
+++ b/notebooks/rim_finalrun128hst_results.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "victorian-tracker",
+   "id": "considered-variance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "actual-butterfly",
+   "id": "automotive-reserve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "accessory-species",
+   "id": "valued-vegetation",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3bda49c3-1027-4003-b6ef-bb59d654ba53",
+   "id": "facial-encounter",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "899a2773-e6bf-4b6b-ada8-b2ebd5866400",
+   "id": "nasty-mailman",
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01cf8024-af24-471d-a140-0ddb92ea6af0",
+   "id": "diagnostic-freeware",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -236,9 +236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
