Notebooks and requirements

--- a/notebooks/create_rim_dataset.ipynb
+++ b/notebooks/create_rim_dataset.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "7ba19255-b8bf-472a-b06f-b6e6c3fa8adb",
+   "id": "deadly-drink",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7dafdcbc-7e8b-4edd-9406-0940aed4f480",
+   "id": "located-battery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "afb2a294-b072-43cb-9b02-2e1af7c3027d",
+   "id": "emerging-flower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5c2c515d-d093-4294-9d43-9e342c8384e9",
+   "id": "fatal-marking",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "facdb7b6-3997-47d8-a849-66420eede92e",
+   "id": "settled-talent",
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ab2dc9ab-4c38-42b4-9ba6-6e0f9b8dee48",
+   "id": "virgin-valentine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "a0109494-e4f7-491b-a6e1-e1a550845798",
+   "id": "divine-samoa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "ecbf53ed-13fc-4d65-a567-e9db1f32683d",
+   "id": "cardiovascular-eagle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "16c57206-3fc3-4346-9814-b6403e9155e6",
+   "id": "hazardous-consortium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ea471a93-6af6-4a87-b973-6dfc33764a3d",
+   "id": "adjusted-diana",
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e51ec42-2e64-4d5c-988c-588fb66115a9",
+   "id": "binary-farmer",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43ed6424-09b1-4c3b-a51b-87aecab4cd49",
+   "id": "sorted-grill",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "5ad573ad-9e80-40b8-9e9a-a97c0b716832",
+   "id": "phantom-split",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27eb6a4b-ff92-4498-a9f9-5de44f0edfdd",
+   "id": "public-jonathan",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -383,9 +383,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -397,7 +397,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
