--- a/notebooks/optimizer_on_rim_pred.ipynb
+++ b/notebooks/optimizer_on_rim_pred.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "33079bfd-ede7-41c2-9a7e-41a232ce638e",
+   "id": "healthy-kidney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dc111933-716b-47d2-8273-d7ddbfb341e2",
+   "id": "communist-pharmacology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "63df170e-f90a-4e3e-a88d-4581f02a7035",
+   "id": "computational-patrick",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "84a00291-190a-4a25-acf8-a5d7b638da0d",
+   "id": "equipped-forest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "41fa5a32-9933-4af1-abb0-988ee12fdd05",
+   "id": "descending-retreat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "86298f7b-4399-4859-9f92-d8090f77eea6",
+   "id": "guided-defeat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "7427fa36-7df4-4eb2-a337-aa43df410b58",
+   "id": "dependent-discussion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcae34c4-4f63-4bfa-96ff-6b599de8410c",
+   "id": "retired-dodge",
    "metadata": {},
    "source": [
     "# Deep Prior"
@@ -350,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "eb903ce5-ecad-4512-9f74-2e7f9046f16a",
+   "id": "negative-balloon",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "10df710b-f51d-40b8-8b28-2fbaa0a4d689",
+   "id": "comprehensive-handling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "ac46364c-df83-4baf-a6a2-278a99a990c7",
+   "id": "durable-parker",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "ac5f90f4-e5bc-4e68-bcf0-a18e0f640213",
+   "id": "welsh-valentine",
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "2a895804-ff0e-45ed-b3e8-51be886453c2",
+   "id": "dominican-collaboration",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   {
    "cell_type": "code",
    "execution_count": 277,
-   "id": "85322705-2ea6-4b2e-89a3-7495778797df",
+   "id": "fresh-truth",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +630,7 @@
   {
    "cell_type": "code",
    "execution_count": 297,
-   "id": "971ab9f3-7d2a-438f-b897-ddf91269667d",
+   "id": "latter-worship",
    "metadata": {},
    "outputs": [
     {
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "29959bb1-8fe7-4623-b9aa-9c190d698558",
+   "id": "operating-luxembourg",
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 176,
-   "id": "0b1aa13f-7874-4c35-b5a9-0d1ac235aa96",
+   "id": "alpine-phrase",
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "379de935-dbe9-4591-945c-ae09d4f4c85c",
+   "id": "peripheral-installation",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "db9b1c43-5318-4268-841a-705cde86481e",
+   "id": "natural-arabic",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f099a43-6ce4-4a2b-8ebf-426af9bba505",
+   "id": "interesting-stock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 222,
-   "id": "57d98032-a28c-4ce6-9833-77ce61004880",
+   "id": "dental-brush",
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   {
    "cell_type": "code",
    "execution_count": 227,
-   "id": "1ecdf6a8-088b-4b4f-a403-1197ad76514b",
+   "id": "distant-entrepreneur",
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ee55e0a-87d5-4a77-95a0-8026a76af572",
+   "id": "expected-republican",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -882,9 +882,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -896,7 +896,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
