--- a/notebooks/rim_finalrun128hst_results.ipynb
+++ b/notebooks/rim_finalrun128hst_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "infectious-stock",
    "metadata": {},
    "outputs": [],
@@ -236,9 +236,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "censai",
    "language": "python",
-   "name": "python3"
+   "name": "censai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
