Created script to re-optimize results on test set, with array job

--- a/notebooks/rim_results_fr128hst.ipynb
+++ b/notebooks/rim_results_fr128hst.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "recovered-fraud",
+   "id": "refined-milan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amateur-drain",
+   "id": "married-genesis",
    "metadata": {},
    "source": [
     "# RIMSU128hstv4"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0a23dec3-10a1-4608-b6aa-67e198792c3d",
+   "id": "spiritual-cheese",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "faced-prefix",
+   "id": "finished-worthy",
    "metadata": {},
    "outputs": [
     {
@@ -1816,7 +1816,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "computational-piece",
+   "id": "secondary-november",
    "metadata": {},
    "outputs": [
     {
@@ -2616,7 +2616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7e1e74-d13f-40c4-8043-ea5b2e9d18a4",
+   "id": "abstract-class",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2624,9 +2624,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2638,7 +2638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
