--- a/notebooks/rim_results_finalrun128.ipynb
+++ b/notebooks/rim_results_finalrun128.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "bizarre-seating",
+   "id": "minus-overview",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "broad-display",
+   "id": "informed-bulgarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "looking-external",
+   "id": "pretty-proceeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "insured-challenge",
+   "id": "instrumental-killer",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "minus-enclosure",
+   "id": "canadian-batch",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "banned-injury",
+   "id": "impaired-contributor",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "immediate-qualification",
+   "id": "structural-ethernet",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vanilla-redhead",
+   "id": "photographic-pharmacology",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -452,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "censai",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "censai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -466,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
