Created script to optimize relative to a posterior distribution instead of just likelihood

--- a/notebooks/vae_results_paper.ipynb
+++ b/notebooks/vae_results_paper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "36449b09-7e0b-4f20-88d8-a50c96f7d3df",
    "metadata": {},
    "outputs": [],
@@ -26,12 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "940ba62c-760f-4334-bb11-ec3f592bed9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sample_size = 32"
+    "sample_size = 4"
    ]
   },
   {
@@ -44,50 +44,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 23,
    "id": "d12c2663-d8b1-4a7f-8f80-f8c403bd8935",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.training.tracking.util.CheckpointLoadStatus at 0x7fe0b10f65b0>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kap_path = os.path.join(os.getenv('CENSAI_PATH'), \"models\", \"VAE1_128hstfr_002_LS16_dr0.7_betaE0.2_betaDS5000_211115153537\") # kappa VAE\n",
-    "gal_path = os.path.join(os.getenv('CENSAI_PATH'), \"models\", \"VAE1_COSMOSFR_003_F32_NLleaky_relu_LS32_betaE0.1_betaDS100000_211018104400\") # cosmos vae\n",
+    "# gal_path = os.path.join(os.getenv('CENSAI_PATH'), \"models\", \"VAE1_COSMOSFR_003_F32_NLleaky_relu_LS32_betaE0.1_betaDS100000_211018104400\") # cosmos vae\n",
+    "gal_path = os.path.join(os.getenv('CENSAI_PATH'), \"models\", \"VAE1_COSMOSFR_001_F16_NLleaky_relu_LS32_betaE0.1_betaDS100000_220112114306\") # cosmos vae\n",
+    "\n",
     "\n",
     "with open(kap_path + \"/script_params.json\", \"r\") as f:\n",
-    "    args = json.load(f)\n",
-    "args = Namespace(**args)\n",
+    "    kargs = json.load(f)\n",
+    "kargs = Namespace(**kargs)\n",
     "with open(kap_path + \"/model_hparams.json\", \"r\") as f:\n",
     "    hparams = json.load(f)\n",
     "kvae = VAE(**hparams)\n",
     "ckpt = tf.train.Checkpoint(net=kvae)\n",
     "checkpoint_manager = tf.train.CheckpointManager(ckpt, kap_path, max_to_keep=1)\n",
     "checkpoint_manager.checkpoint.restore(checkpoint_manager.latest_checkpoint).expect_partial()\n",
-    "files = []\n",
-    "for dataset in args.datasets:\n",
-    "    files.extend(glob.glob(os.path.join(dataset, \"*.tfrecords\")))\n",
-    "np.random.shuffle(files)\n",
-    "# Read concurrently from multiple records\n",
-    "files = tf.data.Dataset.from_tensor_slices(files)\n",
-    "kap_dataset = files.interleave(lambda x: tf.data.TFRecordDataset(x, compression_type=args.compression_type), block_length=args.block_length, num_parallel_calls=tf.data.AUTOTUNE)\n",
-    "kap_dataset = kap_dataset.map(decode_train).batch(sample_size)\n",
     "\n",
     "\n",
     "with open(gal_path + \"/script_params.json\", \"r\") as f:\n",
-    "    args = json.load(f)\n",
-    "args = Namespace(**args)\n",
+    "    gargs = json.load(f)\n",
+    "gargs = Namespace(**gargs)\n",
     "with open(gal_path + \"/model_hparams.json\", \"r\") as f:\n",
     "    hparams = json.load(f)\n",
     "gvae = VAE(**hparams)\n",
     "ckpt = tf.train.Checkpoint(net=gvae)\n",
     "checkpoint_manager = tf.train.CheckpointManager(ckpt, gal_path, max_to_keep=1)\n",
     "checkpoint_manager.checkpoint.restore(checkpoint_manager.latest_checkpoint).expect_partial()\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51481222-0430-43c4-8d11-c744c3dae8bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "files = []\n",
-    "for dataset in args.datasets:\n",
+    "for dataset in kargs.datasets:\n",
     "    files.extend(glob.glob(os.path.join(dataset, \"*.tfrecords\")))\n",
     "np.random.shuffle(files)\n",
     "# Read concurrently from multiple records\n",
     "files = tf.data.Dataset.from_tensor_slices(files)\n",
-    "dataset = files.interleave(lambda x: tf.data.TFRecordDataset(x, compression_type=args.compression_type),block_length=args.block_length, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "kap_dataset = files.interleave(lambda x: tf.data.TFRecordDataset(x, compression_type=kargs.compression_type), block_length=kargs.block_length, num_parallel_calls=tf.data.AUTOTUNE)\n",
+    "kap_dataset = kap_dataset.map(decode_train).batch(sample_size)\n",
+    "\n",
+    "files = []\n",
+    "for dataset in gargs.datasets:\n",
+    "    files.extend(glob.glob(os.path.join(dataset, \"*.tfrecords\")))\n",
+    "np.random.shuffle(files)\n",
+    "# Read concurrently from multiple records\n",
+    "files = tf.data.Dataset.from_tensor_slices(files)\n",
+    "dataset = files.interleave(lambda x: tf.data.TFRecordDataset(x, compression_type=gargs.compression_type),block_length=gargs.block_length, num_parallel_calls=tf.data.AUTOTUNE)\n",
     "dataset = dataset.map(decode_image).map(preprocess_image).batch(sample_size)"
    ]
   },
