added rxj1131 and rim_vs_noise notebooks

--- a/notebooks/rxj1131.ipynb
+++ b/notebooks/rxj1131.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +70,48 @@
     "    rim_params = json.load(f)\n",
     "rim_params[\"source_link\"] = \"relu\"\n",
     "rim = RIMSharedUnetv3(phys, unet, **rim_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filename: ../data/rxj1131_galfitted.fits\n",
+      "No.    Name      Ver    Type      Cards   Dimensions   Format\n",
+      "  0  PRIMARY       1 PrimaryHDU       8   (175, 175)   float32   \n",
+      "  1                1 ImageHDU        31   (175, 175)   float32   \n",
+      "  2                1 ImageHDU        50   (175, 175)   float32   \n",
+      "  3                1 ImageHDU         6   (175, 175)   float32   \n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"../data/rxj1131_galfitted.fits\"\n",
+    "galfit_data = fits.open(path)\n",
+    "galfit_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SNR = 5.098 # known from original fits file\n",
+    "sky_zero_point = -21.1 # mag\n",
+    "photflam = 6.9548454E-20 # inverse sensitivity ergs/cm2/Ang/electron\n",
+    "im = galfit_data[3].data\n",
+    "wcs= WCS(galfit_data[1].header)\n",
+    "psf = fits.open(\"../data/rxj1131_psf1.fits\")[0].data\n",
+    "psf2 = fits.open(\"../data/tiny_psf00_psf.fits\")[0].data\n",
+    "im[im < 0] = 0\n",
+    "image_principales = np.loadtxt(\"../data/images_positions.txt\")[:4] ## B, A, C, D, G, S\n",
+    "f_vega = 8.60e-10 "
    ]
   },
   {
