--- a/notebooks/rxj1131.ipynb
+++ b/notebooks/rxj1131.ipynb
@@ -665,9 +665,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "censai",
    "language": "python",
-   "name": "python3"
+   "name": "censai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -679,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
